Don't disable threaded input handling if rubberbanding is disabled.

It appears this path of code was left in for when threaded input
handling was written for OSX. It ended getting adjusted to not
be based on a command line flag but eventually on a user setting.
Since threaded input handling works correctly even though rubberbanding
is disabled ensure that we always use threaded input handling.

This was a problem because when threaded input handling isn't used
every mouse move ends up generating a post event to the main thread
and the events don't get coalesced. This isn't really a concern
because threaded input handling is always expected to be enabled.

BUG=662328

Review-Url: https://codereview.chromium.org/2489103002
Cr-Commit-Position: refs/heads/master@{#431042}

Former-commit-id: 2422a4e2a7e6b13b8ab3f817912032ba16c7bd73